add_executable(sgemmv0_cpu sgemmv0_cpu.cu)
target_link_libraries(sgemmv0_cpu PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(sgemmv0_cpu PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()

add_executable(sgemmv1_global_memory sgemmv1_global_memory.cu)
target_link_libraries(sgemmv1_global_memory PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(sgemmv1_global_memory PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()

add_executable(sgemmv2_shared_memory sgemmv2_shared_memory.cu)
target_link_libraries(sgemmv2_shared_memory PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(sgemmv2_shared_memory PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()

add_executable(sgemmv2_shared_memory_sliding_window sgemmv2_shared_memory_sliding_window.cu)
target_link_libraries(sgemmv2_shared_memory_sliding_window PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(sgemmv2_shared_memory_sliding_window PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()

add_executable(sgemmv3_increase_work_of_per_thread sgemmv3_increase_work_of_per_thread.cu)
target_link_libraries(sgemmv3_increase_work_of_per_thread PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(sgemmv3_increase_work_of_per_thread PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()

add_executable(sgemmv4_using_float4 sgemmv4_using_float4.cu)
target_link_libraries(sgemmv4_using_float4 PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(sgemmv4_using_float4 PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()
